--- a/SPHINCS+(CPU)/SPHINCS+(CPU).vcxproj.filters
+++ b/SPHINCS+(CPU)/SPHINCS+(CPU).vcxproj.filters
@@ -21,6 +21,9 @@
     <ClCompile Include="sign.c">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="SHA-256.c">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="type.h">
