--- a/SPHINCS+(CPU)/SPHINCS+(CPU).vcxproj.filters
+++ b/SPHINCS+(CPU)/SPHINCS+(CPU).vcxproj.filters
@@ -24,9 +24,18 @@
     <ClCompile Include="SHA-256.c">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="WOTS+.c">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="address.c">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="type.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
+    <ClInclude Include="SHA-256.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
   </ItemGroup>
