--- a/SPHINCS+(CPU)/SPHINCS+(CPU).vcxproj
+++ b/SPHINCS+(CPU)/SPHINCS+(CPU).vcxproj
@@ -139,11 +139,14 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="address.c" />
     <ClCompile Include="main.c" />
     <ClCompile Include="SHA-256.c" />
     <ClCompile Include="sign.c" />
+    <ClCompile Include="WOTS+.c" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="SHA-256.h" />
     <ClInclude Include="type.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
